# Game-Of-Life

./: CMakeLists.txt  README.md
lib/: grid.h
src/: main.cpp
